--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </ul>
             </div>
         </div>
-        <p>&copy; 2024 Reservehub. <a href="https://www.linkedin.com/in/Momo">Momo</a></p>
+        <p>&copy; 2024 Reservehub. Made By <a href="https://www.linkedin.com/in/Momo">Momo</a></p>
     </footer>
     <script src="js/index.js"></script>
 </body>
